--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_show_app_filter"
+        android:title="@string/app_filter"
+        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_view"
+        app:showAsAction="always"
+        />
+
+    <item
         android:id="@+id/action_settings"
         android:title="@string/title_activity_settings"
         android:orderInCategory="100"
