--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -16,7 +16,7 @@
 
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="PCAP Dump" app:iconSpaceReserved="false">
+    <PreferenceCategory app:title="@string/pcap_dump" app:iconSpaceReserved="false">
         <ListPreference
             app:key="pcap_dump_mode"
             app:title="@string/dump_mode"
@@ -45,6 +45,29 @@
             app:title="@string/receiver_port"
             app:iconSpaceReserved="false"
             app:defaultValue="@string/default_collector_port"
+            app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="@string/tls_decryption" app:iconSpaceReserved="false">
+        <SwitchPreference
+            app:key="tls_decryption_enabled"
+            app:title="@string/enable_tls_decryption"
+            app:iconSpaceReserved="false"
+            app:summary="@string/enable_tls_decryption_summary"
+            app:defaultValue="false" />
+
+        <EditTextPreference
+            app:key="tls_proxy_ip_address"
+            app:title="@string/tls_proxy_ip_address"
+            app:defaultValue="0.0.0.0"
+            app:iconSpaceReserved="false"
+            app:useSimpleSummaryProvider="true" />
+
+        <EditTextPreference
+            app:key="tls_proxy_port"
+            app:title="@string/tls_proxy_port"
+            app:iconSpaceReserved="false"
+            app:defaultValue="@string/default_proxy_port"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
 
