--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -33,7 +33,7 @@
 
     <item
         android:id="@+id/action_open_telegram"
-        android:title="@string/open_telegram"
+        android:title="@string/open_telegram_group"
         android:orderInCategory="130"
         app:showAsAction="never"
         />
