--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -5,10 +5,10 @@
     android:layout_height="40dp">
 
     <ImageView
+        android:id="@+id/icon"
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="5dp"
-        android:id="@+id/icon"/>
+        android:layout_margin="4dp" />
 
     <TextView
         android:layout_width="0dp"
