--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_start"
+        android:title="@string/start_button"
+        android:orderInCategory="10"
+        android:icon="@android:drawable/ic_media_play"
+        app:showAsAction="always"
+        />
+
+    <item
         android:id="@+id/action_show_app_filter"
         android:title="@string/app_filter"
         android:orderInCategory="50"
