Implement connections autoscroll and scroll to bottom

--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.emanuelef.remote_capture.EmptyRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/connections_view"
-        ></com.emanuelef.remote_capture.EmptyRecyclerView>
+        android:scrollbars="vertical"
+        android:scrollbarStyle="outsideOverlay"
+        android:id="@+id/connections_view" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        app:maxImageSize="48dp"
+        android:src="@drawable/ic_arrow_drop_down" />
 
     <TextView
         android:id="@+id/no_connections"
@@ -20,4 +31,4 @@
         android:textSize="15dp"
         android:text="@string/no_connections">
     </TextView>
-</LinearLayout>
+</RelativeLayout>
