--- a/app/src/main/res/layout/installed_app_list.xml
+++ b/app/src/main/res/layout/installed_app_list.xml
@@ -11,24 +11,27 @@
         android:padding="5dp">
         <ImageView
             android:id="@+id/app_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"/>
+            android:layout_gravity="center"
+            android:layout_width="36dp"
+            android:layout_height="36dp"/>
+
         <LinearLayout
             android:layout_marginLeft="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginStart="3dp">
+            android:layout_marginStart="10dp">
             <TextView
                 android:id="@+id/list_app_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textSize="16dp"
+                android:textSize="14sp"
                 android:text="App Name"/>
             <TextView
                 android:id="@+id/app_package"
                 android:text="App Package Name"
+                android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
