--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/action_show_app_filter"
-        android:title="@string/app_filter"
+        android:title="@string/set_app_filter"
         android:orderInCategory="50"
         android:icon="@drawable/ic_filter_alt"
         app:showAsAction="ifRoom"
