--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -103,6 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:textIsSelectable="true"
             android:text="5.6.7.8:443" />
     </TableRow>
 
@@ -141,6 +142,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:textIsSelectable="true"
             android:text="1.5 MB down - 0.1 up" />
 
     </TableRow>
@@ -160,6 +162,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:textIsSelectable="true"
             android:text="1.1 K down - 98 down" />
 
     </TableRow>
@@ -179,6 +182,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:textIsSelectable="true"
             android:text="2 min" />
 
     </TableRow>
