Improve navigation drawer

--- a/app/src/main/res/layout/inspector_activity.xml
+++ b/app/src/main/res/layout/inspector_activity.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/monitoring_tablayout"
+        android:id="@+id/inspector_tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/monitoring_pager"
+        android:id="@+id/inspector_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
