--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,12 +3,14 @@
     <string-array name="pcap_dump_modes">
         <item>none</item>
         <item>http_server</item>
+        <item>pcap_file</item>
         <item>udp_exporter</item>
     </string-array>
 
     <string-array name="pcap_dump_modes_labels">
         <item>@string/no_dump</item>
         <item>@string/http_server</item>
+        <item>@string/pcap_file</item>
         <item>@string/udp_exporter</item>
     </string-array>
 </resources>
