--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -16,23 +16,16 @@
 
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/pcap_dump" app:iconSpaceReserved="false">
-        <ListPreference
-            app:key="pcap_dump_mode"
-            app:title="@string/dump_mode"
-            app:iconSpaceReserved="false"
-            app:summary="@string/no_dump_info"
-            app:defaultValue="http_server"
-            app:entries="@array/pcap_dump_modes_labels"
-            app:entryValues="@array/pcap_dump_modes"/>
-
+    <PreferenceCategory app:title="@string/http_server" app:iconSpaceReserved="false">
         <EditTextPreference
             app:key="http_server_port"
             app:title="@string/http_server_port"
             app:defaultValue="8080"
             app:iconSpaceReserved="false"
             app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
 
+    <PreferenceCategory app:title="@string/udp_exporter" app:iconSpaceReserved="false">
         <EditTextPreference
             app:key="collector_ip_address"
             app:title="@string/receiver_ip_address"
