--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -28,7 +28,7 @@
         android:gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:textStyle="italic"
-        android:textSize="15dp"
-        android:text="@string/no_connections">
+        android:textSize="15sp"
+        android:text="@string/capture_not_started">
     </TextView>
 </RelativeLayout>
