--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -1,91 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_screen"
+
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.emanuelef.remote_capture.activities.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/collector_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:gravity="center"
-        android:autoLink="web"
-        android:drawablePadding="10dp"
-        tools:text="Collector Info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status_view" />
-
-    <TextView
-        android:id="@+id/inspector_link"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:text="@string/inspector"
-        android:drawablePadding="5dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/collector_info" />
-
-    <TextView
-        android:id="@+id/status_view"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/rounded_bg"
-        android:gravity="center"
-        android:text="@string/ready"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/quick_settings"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_screen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="32dp"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@id/status_view"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="match_parent"
+        tools:context="com.emanuelef.remote_capture.activities.MainActivity">
 
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/dump_mode_spinner"
+        <TextView
+            android:id="@+id/collector_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:autoLink="web"
+            android:drawablePadding="10dp"
+            tools:text="Collector Info"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/status_view" />
+
+        <TextView
+            android:id="@+id/status_view"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/rounded_bg"
+            android:gravity="center"
+            android:text="@string/ready"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/quick_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spinnerMode="dialog"
-            android:prompt="@string/dump_mode"/>
+            android:orientation="vertical"
+            android:layout_marginTop="35dp"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/status_view"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:paddingEnd="0dp">
-
-            <include layout="@layout/quick_settings_item"
-                android:id="@+id/app_filter_text"
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/dump_mode_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp" />
+                android:spinnerMode="dialog"
+                android:prompt="@string/dump_mode"/>
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/app_filter_switch"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
-        </RelativeLayout>
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:paddingEnd="0dp">
 
-    </LinearLayout>
+                <include layout="@layout/quick_settings_item"
+                    android:id="@+id/app_filter_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="50dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/app_filter_switch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
