--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="?attr/selectableItemBackground"
     android:orientation="horizontal"
     android:paddingHorizontal="4dp"
-    android:layout_height="42dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="4dp" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:layout_marginStart="2dp"
-        android:text="Example app"
+        android:layout_marginStart="5dp"
+        tools:text="Example app"
         android:maxLines="2"
         android:gravity="center_vertical"
         android:layout_marginEnd="8dp"
