Ability to copy/share stats and connection details

--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout
+    android:id="@+id/table"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
@@ -25,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="com.emanuelef.remote_capture (14503)" />
+            tools:text="com.emanuelef.remote_capture (14503)" />
     </TableRow>
 
     <TableRow
@@ -44,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="TLS (TCP)" />
+            tools:text="TLS (TCP)" />
     </TableRow>
 
     <TableRow
@@ -65,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="ssl.example.com" />
+            tools:text="ssl.example.com" />
     </TableRow>
 
     <TableRow
@@ -85,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="1.2.3.4:14631" />
+            tools:text="1.2.3.4:14631" />
     </TableRow>
 
     <TableRow
@@ -104,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="5.6.7.8:443" />
+            tools:text="5.6.7.8:443" />
     </TableRow>
 
     <TableRow
@@ -123,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="Open" />
+            tools:text="Open" />
     </TableRow>
 
     <TableRow
@@ -142,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="example.com/test" />
+            tools:text="example.com/test" />
     </TableRow>
 
     <TableRow
@@ -162,8 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="1.5 MB down - 0.1 up" />
-
+            tools:text="1.5 MB down - 0.1 up" />
     </TableRow>
 
     <TableRow
@@ -182,8 +183,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="1.1 K down - 98 down" />
-
+            tools:text="1.1 K down - 98 down" />
     </TableRow>
 
     <TableRow
@@ -202,7 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="2 min" />
+            tools:text="2 min" />
     </TableRow>
 
     <TableRow
@@ -221,7 +221,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="01/02/20 00:45:01" />
+            tools:text="01/02/20 00:45:01" />
     </TableRow>
 
     <TableRow
@@ -240,7 +240,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:textIsSelectable="true"
-            android:text="01/02/20 00:47:01" />
+            tools:text="01/02/20 00:47:01" />
     </TableRow>
 </TableLayout>
 
