--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -7,7 +7,8 @@ android:layout_height="fill_parent">
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:id="@+id/table">
 
     <TableRow
         android:layout_width="match_parent"
