--- a/app/src/main/res/menu/connections_menu.xml
+++ b/app/src/main/res/menu/connections_menu.xml
@@ -6,7 +6,22 @@
     <item
         android:id="@+id/action_show_app_filter"
         android:title="@string/set_app_filter"
+        android:orderInCategory="10"
         android:icon="@drawable/ic_filter_alt"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/save"
+        android:title="@string/save_to_file"
+        android:orderInCategory="20"
+        android:icon="@drawable/ic_save"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/share"
+        android:title="@string/share"
+        android:orderInCategory="30"
+        android:icon="@drawable/ic_share"
         app:showAsAction="ifRoom" />
 
 </menu>
