--- a/app/src/main/res/layout/app_installed_item.xml
+++ b/app/src/main/res/layout/app_installed_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="?attr/selectableItemBackground"
     android:padding="3dp">
     <LinearLayout
         android:layout_width="match_parent"
